--- a/css.css
+++ b/css.css
@@ -6,21 +6,22 @@ body{
     margin: 0px;
     box-sizing: border-box;
     background: url(https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/5baf8325-ed69-40b0-b9d2-d8c5d2bde3b0);
-    height: 130vh;
+    height: 100vh;
     display: grid;
     justify-content: center;
     align-items: center;
 }
 main{
     width: 90vw;
-    height: 95%;
-    background-color: white;
+    padding-top: 4vh;
+    padding-bottom: 4vh;
+    /* background-color: white; */
     display: grid;
     justify-content: center;
     align-items: center;
     grid-template-columns: 60px 10fr;
     border-radius: 3vh;
-    box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.205);
+    
 }
 nav{
     border-top-left-radius: inherit;
@@ -28,6 +29,7 @@ nav{
     width: 100%;
     height: 100%;
     background-color: #493971;
+    padding-top: 5vh;
 }
 ul{
     display: flex;
@@ -37,8 +39,7 @@ ul{
     width: 100%;
     height: 50%;
     padding: 0px;
-    margin: 0px;
-    
+    margin: 0px;   
 }
 li {
     position: relative;
@@ -68,12 +69,67 @@ li > a{
 .icon{
     position: relative;
     color: white;
-    border-radius: 2vh;
+    border-top-left-radius: 2vh;
+    border-bottom-left-radius: 2vh;
     width: 60px;
     height: 40px;
     font-size: 20px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+.nav-item{
+    position: relative;
+}
+.nav-item b:nth-child(1) {
+    position: absolute;
+    height: 15px;
+    width: 100%;
+    background: #fff;
+    display: none;
+}
+
+.nav-item b:nth-child(1)::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-bottom-right-radius: 20px;
+    background: rgb(73, 57, 113);
+}
+
+.nav-item b:nth-child(2) {
+    position: absolute;
+    bottom: 10px;
+    height: 15px;
+    width: 100%;
+    background: #fff;
+    display: none;
+}
+
+.nav-item b:nth-child(2)::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-top-right-radius: 20px;
+    background: rgb(73, 57, 113);
+}
+
+.nav-item.active b:nth-child(1),
+.nav-item.active b:nth-child(2) {
+    display: block;
+}
+.nav-item.active i{
+    background-color: white;
+    color: black;
+}
+
 .home-icon::before{
     content: "\f015";
     font-family: FontAwesome;
@@ -100,19 +156,25 @@ li > a{
     font-style: normal;
 }
 section{
+    border-top-right-radius: 3vh;
+    border-bottom-right-radius: 3vh;
     width: 100%;
     height: 100%;
     font-family: 'Nunito';
+    background-color: white;
+    box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.205);
 }
 .section-main{
+    border-top-right-radius: 3vh;
+    border-bottom-right-radius: 3vh;
     width: 100%;
     height: 100%;
     display: grid;
     justify-content: center;
     align-items: center;
     padding: 2vh 1vw 2vh 1vw;
-    column-gap: 5vw;
-    grid-template-columns: 3fr 1fr;
+    column-gap: 1vw;
+    grid-template-columns: 2.9fr 1.2fr;
 }
 .popular-acti{
     display: grid;
@@ -120,7 +182,7 @@ section{
     align-items: center;
     border-radius: 3vh;
     width: 100%;
-    height: auto;
+    height: 100%;
     background-color: #f6f7fb;
     grid-template-rows: 1.2fr 1fr;
     position: relative;
@@ -135,7 +197,9 @@ section{
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-rows: 2fr 3fr;
+    grid-template-rows: 1fr 3fr;
+    row-gap: 2vh;
+    padding: 0px 0.5vw 0px 0.5vw;
 }
 .images{
     display: grid;
@@ -375,28 +439,30 @@ h1 ,h2 ,p{
 .my-prof{
     width: 100%;
     height: 100%;
-    background-color: blue;
     display: grid;
-    grid-template-rows: 1fr 2.5fr;
+    grid-template-rows: 0.2fr 2fr;
 }
 .name{
     width: 100%;
     height: 100%;
-    background-color: red;
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-columns: 1fr 1fr 3fr;
+    grid-template-columns: 1fr 1fr 3fr 1fr;
 }
-.active-cal{
+.name > img{
     width: 100%;
-    height: 100%;
-    background-color: green;
+    height: 60%;
+    border-radius: 50%;
 }
 .others-prof{
     width: 100%;
     height: 100%;
-    background-color: #7c88e0;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-rows: 40px 1fr 1fr;
+    row-gap: 10px;
 }
 .icon-prof{
     position: relative;
@@ -412,5 +478,100 @@ h1 ,h2 ,p{
     font-family: FontAwesome;
     font-style: normal;
 }
+.active-cal{
+    width: 100%;
+    height: 100%;
+    background-color: #d6e3f8;
+    border-radius: 2vh;
+    padding: 2vh 1vw 0px 1vw;
+    display: grid;
+    grid-template-rows: 0.5fr 2fr;
+}
+.active-cal-head{
+    font-size: 0.8rem;
+}
+.activity-name{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 0.7fr 1fr;
+    column-gap: 1vw;
+    padding-left: 3vw;
+    padding-right: 2vw;
+    padding-bottom: 1vh;
+    position: relative;
+}
+.circle{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    border-radius: 50%;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    background: conic-gradient(#590b94 85%,#b3b2b2 0) ;
+    color: #474747;
+}
+.circle::before{
+    border-radius: 50%;
+    content: " ";
+    position: absolute;
+    width: 70%;
+    height: 70%;
+    padding: 5px;
+    background-color: rgb(214, 227, 248);
+    z-index: -1;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
 
+}
+.others-prof-header > h2{
+    margin: 0px;
+    padding: 0px;
+}
+.id > img{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+}
 
+.prof{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-rows: 15% 65% 20%;
+    overflow: hidden;
+    background-color: white;
+    padding: 1vh 1vw 1vh 1vw;
+    border-radius: 1vh;
+}
+.post-pic{
+    width: 100%;
+    height: 100%;
+}
+.post-pic > img{
+    width: 100%;
+    height: 150px;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 1vh;
+}
+.caption{
+    font-size: 0.9rem;
+}
+.id{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: 25px 1fr;
+    column-gap: 0.5vw;
+}
+.id > p{
+    margin: 0px;
+    display: inline-block;
+    font-weight:700;
+}
